Use most recent version of Frgaal